@@ -1,0 +1,2 @@
+#! /bin/sh
+rm -Rf build dist MANIFEST
